[gd_scene load_steps=5 format=3 uid="uid://bplb2oswk7cka"]

[ext_resource type="Script" path="res://levels/GUI/titlescreen/title_screen.gd" id="1_7jbsr"]
[ext_resource type="Texture2D" uid="uid://blvef05rwoq85" path="res://assets/textures/maps/beijing_Page_049.png" id="2_5x002"]
[ext_resource type="FontFile" uid="uid://c5pa5j5xqjyac" path="res://assets/fonts/DMSerifDisplay-Italic.ttf" id="4_nx421"]

[sub_resource type="Theme" id="Theme_b1lx2"]
default_font_size = 48

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_b1lx2")
script = ExtResource("1_7jbsr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.165
anchor_right = 0.165
offset_left = -1030.16
offset_top = -1078.48
offset_right = 4916.84
offset_bottom = 4026.52
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_5x002")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.177
anchor_right = 1.001
anchor_bottom = 0.433
offset_left = 5.0
offset_top = -0.160004
offset_right = 0.0799561
offset_bottom = 0.359955
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/normal_font = ExtResource("4_nx421")
theme_override_fonts/italics_font = ExtResource("4_nx421")
theme_override_font_sizes/normal_font_size = 170
bbcode_enabled = true
text = "[center]Qianlong's World[/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -304.0
offset_top = 567.0
offset_right = 303.0
offset_bottom = 672.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Credits"

[connection signal="button_down" from="HBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="HBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="button_down" from="HBoxContainer/SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="button_down" from="HBoxContainer/CreditsButton" to="." method="_on_credits_button_button_down"]
